#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([count-char], [0.0.1], [andre - dot - aberer - at - googlemail - dot - com])
AC_CONFIG_SRCDIR([src/count-char.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.

AC_OUTPUT



AM_INIT_AUTOMAKE

AM_SILENT_RULES([yes])


AC_OUTPUT(Makefile src/Makefile )
